--- a/index.html
+++ b/index.html
@@ -5,8 +5,44 @@
   <meta charset="UTF-8">
   <title>CSS Flag Project</title>
   <style>
-    /* Write your CSS Code here */
+    .flag {
+      text-align: center;
+      font-size: 5rem;
+      position: relative;
+      color: white;
+    }
     
+    div.flag {
+      width: 900px;
+      height: 600px;
+      background-color: red;
+      position: relative;
+    }
+
+    .flag div {
+      width: 100%;
+      height: 300px;
+      background-color: blue;
+      position: absolute;
+      top: 150px;
+    }
+
+    .flag div div {
+      width: 200px;
+      height: 200px;
+      background-color: white;
+      border-radius: 50%;
+      position: absolute;
+      left: 350px;
+      top: 50px;
+    }
+
+    .flag div div p {
+      color: black;
+      position: relative;
+      top: -75px;
+    }
+
   </style>
 </head>
 
